@@ -5,6 +5,7 @@ import com.example.demo.repository.SkillOfferRepository;
 import com.example.demo.service.SkillOfferService;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SkillOfferServiceImpl implements SkillOfferService {
@@ -21,9 +22,14 @@ public class SkillOfferServiceImpl implements SkillOfferService {
     }
 
     @Override
-    public SkillOffer getOffer(Long id) {
+    public SkillOffer getOfferById(Long id) {
         return repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Offer not found"));
+    }
+
+    @Override
+    public SkillOffer getOffer(Long id) {
+        return getOfferById(id);
     }
 
     @Override
@@ -33,14 +39,15 @@ public class SkillOfferServiceImpl implements SkillOfferService {
 
     @Override
     public List<SkillOffer> getAvailableOffers() {
+        // Fix: Use lambda instead of method reference to avoid "cannot find symbol"
         return repository.findAll().stream()
-                .filter(SkillOffer::getActive)
-                .toList();
+                .filter(offer -> offer.isActive())
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteOffer(Long id) {
-        SkillOffer offer = getOffer(id);
+        SkillOffer offer = getOfferById(id);
         offer.setActive(false);
         repository.save(offer);
     }
